# syclacademy

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/workflows/: test-acpp.yml
Code_Exercises/Advanced_Data_Flow/: solution.cpp
Code_Exercises/Coalesced_Global_Memory/: solution.cpp
Code_Exercises/Data_Parallelism/: source.cpp
Code_Exercises/Device_Discovery/: CMakeLists.txt  solution.cpp  source.cpp
Code_Exercises/Enqueueing_a_Kernel/: build  source.cpp
Code_Exercises/Handling_Errors/: .clangd  source.cpp
Code_Exercises/Image_Convolution/: reference.cpp
Code_Exercises/In_Order_Queue/: solution_vector_add.cpp
Code_Exercises/Introduction_to_USM/: source.cpp
Code_Exercises/Local_Memory_Tiling/: solution.cpp
Code_Exercises/Managing_Data/: source.cpp
Code_Exercises/Using_USM/: source.cpp
Code_Exercises/Vectors/: solution.cpp
Code_Exercises/What_is_SYCL/: CMakeLists.txt  README.md  build  source.cpp
Code_Exercises/Work_Group_Sizes/: solution.cpp
Code_Exercises/oneMath_gemm/: CMakeLists.txt
